--- a/khl/cv/projects.tex
+++ b/khl/cv/projects.tex
@@ -49,10 +49,8 @@
     {} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item{Fixed an input problem in python-igraph: \href{https://github.com/igraph/python-igraph/pull/618}{\underline{\smash{github.com/igraph/python-igraph/pull/618}}}}
-        \item{Implemented parallel parameter scan in Agents.jl: \href{https://github.com/JuliaDynamics/Agents.jl/pull/484}{\underline{\smash{github.com/JuliaDynamics/Agents.jl/pull/484}}}}
-        \item{Fixed a threading problem in a C++ game: \href{https://github.com/vcmi/vcmi/pull/1868}{\underline{\smash{github.com/vcmi/vcmi/pull/1868}}}}
-        \item{Check my \href{https://github.com/pulls?q=is\%3Apr+archived\%3Afalse+is\%3Aclosed+author\%3AAdriankhl}{\underline{\smash{GitHub PR page}}} for all my contributions}
+        \item{Fixed issues and implemented features in various projects using C++, Julia, Python, and Java}
+        \item{Check my \href{https://github.com/pulls?q=is\%3Apr+archived\%3Afalse+is\%3Aclosed+author\%3AAdriankhl}{\underline{\smash{GitHub PR page}}} for complete contributions}
       \end{cvitems}
     }
 
