--- a/khl/cv/selected_presentations.tex
+++ b/khl/cv/selected_presentations.tex
@@ -17,7 +17,7 @@
     {2023} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Talked about some Kotlin-specific aspects of Relativitization.}
+        \item {Discussed Kotlin-specific aspects of Relativitization}
       \end{cvitems}
     }
 
@@ -41,7 +41,7 @@
     {2023} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Shared my experience on developing open source softwares.}
+        \item {Shared experience in developing open-source software}
       \end{cvitems}
     }
 
@@ -53,7 +53,7 @@
     {2022} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Explained the mathematical and algorithmic details of my simulation framework.}
+        \item {Explained the mathematical and algorithmic details of my simulation framework}
       \end{cvitems}
     }
 
@@ -101,7 +101,7 @@
     {2021} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Presented my research on game theoretical models and agent-based models of the academic funding system.}
+        \item {Presented research on game theoretical and agent-based models of academic funding}
       \end{cvitems}
     }
 
@@ -125,7 +125,7 @@
     {2018} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced my research on utilizing gravitational waves lensing to search for intermediate‑mass black holes.}
+        \item {Introduced research on using gravitational wave lensing to search for intermediate-mass black holes}
       \end{cvitems}
     }
 
