--- a/khl/cv/presentations.tex
+++ b/khl/cv/presentations.tex
@@ -17,7 +17,7 @@
     {2023} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Talked about some Kotlin-specific aspects of my software.}
+        \item {Discussed Kotlin-specific aspects of Relativitization}
       \end{cvitems}
     }
 
