--- a/khl/resume/resume-challenge.tex
+++ b/khl/resume/resume-challenge.tex
@@ -130,7 +130,7 @@ Enthusiastic indie game developer and researcher with a strong background in phy
   \resumeSubHeadingListStart
     \resumeSubheading
       {Leiden University}{Leiden, the Netherlands}
-      {Ph.D. in Quantitative Science Studies}{Jun. 2019 -- present}
+      {Ph.D. in Quantitative Science Studies}{Jun. 2019 -- present $|$ Expected graduation: early 2024}
     \resumeSubheading
       {The Chinese University of Hong Kong}{Hong Kong, China}
       {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 -- Aug. 2018}
@@ -179,6 +179,7 @@ Enthusiastic indie game developer and researcher with a strong background in phy
         \resumeItem{Proposed models to detect black-hole horizon effects and gravitational wave lensing}
         \resumeItem{Contributed to a C codebase for model implementation}
         \resumeItem{Ran simulations on supercomputer clusters}
+        \resumeItem{Conducted Bayesian statistical analysis on simulated and real data using Python}
         \resumeItem{Published 2 papers in reputable journals}
       \resumeItemListEnd
 
