--- a/khl/resume/resume-data.tex
+++ b/khl/resume/resume-data.tex
@@ -130,7 +130,7 @@ Dedicated researcher and developer with a diverse background in data-oriented re
   \resumeSubHeadingListStart
     \resumeSubheading
       {Leiden University}{Leiden, the Netherlands}
-      {Ph.D. in Quantitative Science Studies}{Jun. 2019 -- present}
+      {Ph.D. in Quantitative Science Studies}{Jun. 2019 -- present $|$ Expected graduation: early 2024}
     \resumeSubheading
       {The Chinese University of Hong Kong}{Hong Kong, China}
       {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 -- Aug. 2018}
