--- a/khl/resume/resume-kotlin.tex
+++ b/khl/resume/resume-kotlin.tex
@@ -216,7 +216,7 @@ Passionate about utilizing advanced technologies to solve complex problems.
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Kotlin, Java, SQL, Python, Julia, C/C++, Bash, LaTeX} \\
-     \textbf{Frameworks and Libraries}{: Ktor, kotlinx.coroutine, KSP, libGDX, pandas, NumPy, Matplotlib} \\
+     \textbf{Frameworks and Libraries}{: Ktor, kotlinx.coroutine, KSP, libGDX, Android SDK, pandas, NumPy, Matplotlib} \\
      \textbf{Tools}{: Git, Linux, Gradle, Vim, Android Studio, IntelliJ} \\
     }}
  \end{itemize}
