Add expected graduation to resume kotlin

--- a/khl/resume/resume-kotlin.tex
+++ b/khl/resume/resume-kotlin.tex
@@ -132,7 +132,7 @@ Passionate about utilizing advanced technologies to solve complex problems.
   \resumeSubHeadingListStart
     \resumeSubheading
       {Leiden University}{Leiden, the Netherlands}
-      {Ph.D. in Quantitative Science Studies}{Jun. 2019 -- present}
+      {Ph.D. in Quantitative Science Studies}{Jun. 2019 -- present $|$ Expected graduation: early 2024}
     \resumeSubheading
       {The Chinese University of Hong Kong}{Hong Kong, China}
       {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 -- Aug. 2018}
