--- a/khl/resume/resume-kotlin.tex
+++ b/khl/resume/resume-kotlin.tex
@@ -193,14 +193,14 @@ Passionate about utilizing advanced technologies to solve complex problems.
       \resumeProjectHeading
           {\textbf{KSerGen} $|$ \emph{Kotlin, KSP, Gradle, Maven Central}}{Apr. 2023 -- present}
           \resumeItemListStart
-            \resumeItem{Repository: \href{https://github.com/adriankhl/ksergen}{\underline{github.com/adriankhl/ksergen}}}
+            \resumeItem{Repository: \href{https://github.com/adriankhl/ksergen}{\underline{\smash{github.com/adriankhl/ksergen}}}}
             \resumeItem{Created a KSP plugin to automate generation of immutable data classes and serialization hierarchies}
             \resumeItem{Published the plugin to Maven Central}
           \resumeItemListEnd
       \resumeProjectHeading
           {\textbf{Relativitization} $|$ \emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}}{Mar. 2021 -- present}
           \resumeItemListStart
-            \resumeItem{Repository: \href{https://github.com/adriankhl/relativitization}{\underline{github.com/adriankhl/relativitization}}}
+            \resumeItem{Repository: \href{https://github.com/adriankhl/relativitization}{\underline{\smash{github.com/adriankhl/relativitization}}}}
             \resumeItem{Developed a parallel agent-based computational framework utilizing coroutines}
             \resumeItem{Designed efficient algorithms and data structures for relativistic spacetime calculations}
             \resumeItem{Automated testing using JUnit and GitHub Actions}
