Fix resume data

--- a/khl/resume/resume-data.tex
+++ b/khl/resume/resume-data.tex
@@ -191,8 +191,8 @@ Dedicated researcher and developer with a diverse background in data-oriented re
       \resumeProjectHeading
           {\textbf{Funding and knowledge dynamics} $|$ \emph{Python, Julia, Agents.jl, igraph, Kotlin}}{Aug. 2021 -- present}
           \resumeItemListStart
-            \resumeItem{Built game theory model to explore funding applicant priorities}
-            \resumeItem{Developed agent-based model to study scholar behaviors}
+            \resumeItem{Built game theory models to explore funding applicant priorities}
+            \resumeItem{Developed agent-based models to study scholar behaviors}
             \resumeItem{Analyzed simulated data to illustrate efficiency-funding relation}
             \resumeItem{Created a simulation framework in Kotlin for knowledge diffusion under information delays}
           \resumeItemListEnd
@@ -201,7 +201,7 @@ Dedicated researcher and developer with a diverse background in data-oriented re
           \resumeItemListStart
             \resumeItem{Manipulated data with SQL and Pandas}
             \resumeItem{Collaborated with domain experts to formulate causal relations}
-            \resumeItem{Designed and implemented Bayesian network model to address funding allocation dynamics}
+            \resumeItem{Designed and implemented Bayesian network models to address funding allocation dynamics}
             \resumeItem{Analyzed data using PyStan and Python to identify gender biases in funding schemes}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
