--- a/khl/resume/resume-data.tex
+++ b/khl/resume/resume-data.tex
@@ -189,17 +189,17 @@ Dedicated researcher and developer with a diverse background in data-oriented re
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Funding and knowledge dynamics} $|$ \emph{Python, Julia, Agents.jl, igraph, Kotlin}}{Aug. 2021 -- present}
+          {\textbf{Funding and knowledge dynamics} $|$ \emph{Python, igraph, Julia, Agents.jl, Kotlin}}{Aug. 2021 -- present}
           \resumeItemListStart
-            \resumeItem{Built game theory models to explore funding applicant priorities}
-            \resumeItem{Developed agent-based models to study scholar behaviors}
-            \resumeItem{Analyzed simulated data to illustrate efficiency-funding relation}
-            \resumeItem{Created a simulation framework in Kotlin for knowledge diffusion under information delays}
+            \resumeItem{Created game theory models in Python to explore funding applicant priorities}
+            \resumeItem{Developed agent-based models in Julia to study scholar behaviors}
+            \resumeItem{Built a simulation framework in Kotlin to study knowledge diffusion under information delays}
+            \resumeItem{Analyzed simulated data to illustrate the relation between efficiency and funding strategy}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Funding criteria and gender biases} $|$ \emph{Python, PyStan, SQL, Pandas}}{Jan. 2020 -- May. 2022}
+          {\textbf{Funding criteria and gender biases} $|$ \emph{Python, PyStan, pandas, SQL}}{Jan. 2020 -- May. 2022}
           \resumeItemListStart
-            \resumeItem{Manipulated data with SQL and Pandas}
+            \resumeItem{Manipulated data with SQL and pandas}
             \resumeItem{Collaborated with domain experts to formulate causal relations}
             \resumeItem{Designed and implemented Bayesian network models to address funding allocation dynamics}
             \resumeItem{Analyzed data using PyStan and Python to identify gender biases in funding schemes}
