Replace http by restful

--- a/khl/coverletter/coverletter-picnic.tex
+++ b/khl/coverletter/coverletter-picnic.tex
@@ -130,7 +130,7 @@ To continually challenge myself, I dedicated significant effort to create a soph
 
 Concurrently with my academic pursuits, I have actively contributed to open-source projects. These experiences have broadened my skill set, propelling me from a scientific programmer to a well-rounded software engineer. This underscores my commitment to the pursuit of excellence in software development and underscores my adaptability in the face of new challenges.
 
-While my prior experience may not directly align with warehouse simulation, I am confident in my ability to contribute significantly to modeling human behavior within warehouse environments. I am fully prepared to bridge any knowledge gaps, including those related to cloud computing technologies.
+While my prior experience may not directly align with warehouse simulations, I am confident in my ability to contribute significantly to modeling human behavior within warehouse environments. I am fully prepared to bridge any knowledge gaps, including those related to cloud computing technologies.
 
 I am eagerly anticipating the opportunity to join your team and make a meaningful impact. Thank you for considering my application.
 
