--- a/khl/resume/resume-data.tex
+++ b/khl/resume/resume-data.tex
@@ -146,7 +146,7 @@ Dedicated researcher and developer with a diverse background in data-oriented re
       {Self-employment}{Mar. 2021 -- present}
       \resumeItemListStart
         \resumeItem{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
-        \resumeItem{Implemented a RESTful server-client architecture and a user-friendly graphical interface for PC and Android}
+        \resumeItem{Implemented a RESTful server-client architecture and user-friendly graphical interfaces for PC and Android}
         \resumeItem{Created utility-based AI to determine actions from complex observations}
         \resumeItem{Managed a codebase with 60K+ lines of code via Git}
         \resumeItem{Presented the game at various conferences, including KotlinConf}
@@ -194,7 +194,7 @@ Dedicated researcher and developer with a diverse background in data-oriented re
             \resumeItem{Created game theory models in Python to explore funding applicant priorities}
             \resumeItem{Developed agent-based models in Julia to study scholar behaviors}
             \resumeItem{Built a simulation framework in Kotlin to study knowledge diffusion under information delays}
-            \resumeItem{Analyzed simulated data to illustrate the relation between efficiency and funding strategy}
+            \resumeItem{Analyzed simulated data using Python and igraph to illustrate the relation between efficiency and funding strategy}
           \resumeItemListEnd
       \resumeProjectHeading
           {\textbf{Funding criteria and gender biases} $|$ \emph{Python, PyStan, pandas, SQL}}{Jan. 2020 -- May. 2022}
