--- a/khl/coverletter/coverletter-sun-hung-kai.tex
+++ b/khl/coverletter/coverletter-sun-hung-kai.tex
@@ -122,15 +122,19 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am thrilled to express my enthusiastic interest in the "Assistant Data Engineer" position at Sun Hung Kai Properties. As a dedicated researcher and accomplished software developer with a strong foundation in data-oriented challenges, I am eager to leverage my skills and expertise in a practical business setting through this role.
+I am writing to express my enthusiastic interest in the "Assistant Data Engineer" position at Sun Hung Kai Properties. As a dedicated researcher and accomplished software developer with a strong foundation in data-oriented challenges, I am eager to leverage my skills and expertise in a practical business setting through this role.
 
-My journey began in the realm of physics, where I conducted rigorous data analytical research on complex astronomical data. Through this experience, I honed my skills in C, Python, Linux systems, supercomputing, and simulations. Building upon this foundation, my PhD research took an innovative turn as I delved into computational social science, conducting projects such as the analysis of gender biases in academic funding application systems. This endeavor equipped me with robust proficiency in Python, pandas, SQL, and databases. To continually push my boundaries, I dedicated substantial effort to crafting a sophisticated simulation framework and a game using Kotlin, a language closely related to Java. These undertakings underscore my adaptability to diverse object-oriented languages and frameworks.
+My journey began in the realm of physics, where I embarked on rigorous data analytical research involving complex astronomical data. This experience has honed my proficiency in C, Python, Linux systems, supercomputing, and simulations. Building upon this foundation, my PhD research led me to the exciting field of computational social science. Notably, I conducted projects analyzing gender biases in academic funding application systems, solidifying my expertise in Python, pandas, SQL, and databases.
 
-In parallel with my academic pursuits, I actively contributed to open-source projects, elevating my abilities from a scientific programmer to a versatile software engineer. This evolution underscores my unwavering commitment to excellence in software development and my adeptness at embracing new challenges.
+To continuously broaden my skill set, I dedicated substantial effort to crafting a sophisticated simulation framework and developing a game using Kotlin, a language closely related to Java. These undertakings underscore my adaptability to diverse object-oriented languages and frameworks, a trait I believe is crucial in effectively addressing evolving data challenges.
 
-Sun Hung Kai Properties stands out to me not only for its impressive projects but also for its commitment to innovation and collaboration. I am particularly drawn to the opportunity to contribute to your data engineering team and drive impactful solutions.
+In parallel with my academic pursuits, I have actively contributed to open-source projects. This evolution from a scientific programmer to a versatile software engineer highlights my commitment to excellence in software development and my ability to embrace new challenges.
 
-I eagerly anticipate the prospect of joining your team and making a meaningful contribution. Thank you for considering my application.
+Throughout my academic journey, I collaborated with individuals from diverse cultural backgrounds, cultivating strong teamwork and communication skills. This experience has equipped me to thrive in collaborative environments and to effectively contribute to cross-functional teams.
+
+I am excited about the prospect of bringing my data analytical and software engineering skills to the role of data engineer at Sun Hung Kai Properties. The opportunity to contribute to your team's innovative projects and make a meaningful impact aligns perfectly with my aspirations. I am eagerly anticipating the chance to discuss how my background and expertise align with your company's vision and needs.
+
+Thank you for considering my application. I look forward to the opportunity to further discuss my qualifications in an interview.
 
 \end{cvletter}
 
