--- a/khl/cv-soft.tex
+++ b/khl/cv-soft.tex
@@ -114,7 +114,7 @@ Enthusiastic researcher and software developer with a strong background in physi
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{cv/education.tex}
-\input{cv/experience.tex}
+\input{cv/experience-soft.tex}
 \input{cv/projects.tex}
 \input{cv/skills.tex}
 \input{cv/selected_academic_publications.tex}
