Add soft experience

--- a/khl/cv-soft.tex
+++ b/khl/cv-soft.tex
@@ -115,7 +115,7 @@ Enthusiastic researcher and software developer with a strong background in physi
 %-------------------------------------------------------------------------------
 \input{cv/education.tex}
 \input{cv/experience-soft.tex}
-\input{cv/projects.tex}
+\input{cv/projects-soft.tex}
 \input{cv/skills.tex}
 \input{cv/selected_academic_publications.tex}
 \input{cv/selected_presentations.tex}
