--- a/khl/cv/experience.tex
+++ b/khl/cv/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Research/Work Eperience}
+\cvsection{Research/Work Experience}
 
 
 %-------------------------------------------------------------------------------
