Rename cv files

--- a/khl/cv-full.tex
+++ b/khl/cv-full.tex
@@ -115,11 +115,11 @@
 \input{cv/experience.tex}
 \input{cv/projects.tex}
 \input{cv/skills.tex}
-\input{cv/selected_academic_publications.tex}
+\input{cv/selected-academic-publications.tex}
 \input{cv/presentations.tex}
-\input{cv/honors_and_awards.tex}
+\input{cv/honors-and-awards.tex}
 \input{cv/committees.tex}
-\input{cv/other_academic_publications.tex}
+\input{cv/other-academic-publications.tex}
 %\input{cv/experience.tex}
 %\input{cv/extracurricular.tex}
 %\input{cv/writing.tex}
