Update summary for cv-short

--- a/khl/cv-soft.tex
+++ b/khl/cv-soft.tex
@@ -107,7 +107,7 @@
   {\thepage}
 
 \vspace{1em}
-Enthusiastic researcher and software developer with a strong background in physics and quantitative social science. Experienced in game development, conducting innovative research, and solving complex problems.
+Enthusiastic researcher and software developer with a strong background in physics and quantitative social science, seeking opportunities to leverage my skills and expertise in data-oriented research and software development to drive innovation and contribute to meaningful projects.
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
