Add fair project to cv soft

--- a/khl/cv/projects-soft.tex
+++ b/khl/cv/projects-soft.tex
@@ -11,6 +11,18 @@
 
 %---------------------------------------------------------
   \cventry
+    {\emph{Python, SQL}} % Research project
+    {FAIR text-mining and citation analysis} % Research organization
+    {} % Location
+    {Jun. 2023 - present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item{Analyzed the diffusion of FAIR principles in academic publications}
+        \item{Investigated the references to FAIR principles in policy documents}
+      \end{cvitems}
+    }
+
+  \cventry
     {\emph{Python, igraph, Julia, Agents.jl, Kotlin}} % Research project
     {Funding and knowledge dynamics} % Research organization
     {} % Location
@@ -36,8 +48,6 @@
         \item{Designed efficient algorithms and data structures for relativistic spacetime calculations}
         \item{Automated testing using JUnit and GitHub Actions}
         \item{Authored comprehensive documentation}
-        \item{Built an interstellar knowledge dynamics model, analyzed generated data with Python}
-        \item{Published 2 papers about the framework and model}
       \end{cvitems}
     }
 
