--- a/khl/cv/selected-presentations.tex
+++ b/khl/cv/selected-presentations.tex
@@ -118,16 +118,16 @@
 %    }
 %
 %---------------------------------------------------------
-  \cventry
-    {Discovering intermediate‑mass black hole lenses through gravitational wave lensing} % Role
-    {Gravity and Cosmology 2018} % Event
-    {Yukawa Institute for Theoretical Physics, Kyoto University, Japan} % Location
-    {2018} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-        \item {Introduced research on using gravitational wave lensing to search for intermediate-mass black holes}
-      \end{cvitems}
-    }
+%  \cventry
+%    {Discovering intermediate‑mass black hole lenses through gravitational wave lensing} % Role
+%    {Gravity and Cosmology 2018} % Event
+%    {Yukawa Institute for Theoretical Physics, Kyoto University, Japan} % Location
+%    {2018} % Date(s)
+%    {
+%      \begin{cvitems} % Description(s)
+%        \item {Introduced research on using gravitational wave lensing to search for intermediate-mass black holes}
+%      \end{cvitems}
+%    }
 
 %%---------------------------------------------------------
 %  \cventry
