--- a/khl/resume/resume-data.tex
+++ b/khl/resume/resume-data.tex
@@ -169,6 +169,7 @@ Dedicated researcher and developer with a diverse background in data-oriented re
         \resumeItem{Collaborated with an international team spanning 5 countries}
         \resumeItem{Worked with software developers to build a data platform for confidential funding data}
         \resumeItem{Conducted data-oriented research on funding allocation dynamics}
+        \resumeItem{Organized training workshops on open science and open source practices}
     \resumeItemListEnd
 
     \resumeSubheading
