Update leiden cover letter

--- a/khl/coverletter/coverletter-leiden.tex
+++ b/khl/coverletter/coverletter-leiden.tex
@@ -122,18 +122,19 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the "Young Professional Program – Java Developer" program at Rabobank. With a background as a software developer and a researcher involved in social science research, I am excited about the opportunity to work on software projects that have a real social impact.
+I am writing to express my strong interest in the "Data Management Expert with a heart for science" position at the Center for Digital Scholarship (CDS). As a Ph.D. candidate at Leiden University, I am looking forward to contribute to the data management community at Leiden.
 
-My journey began in the realm of physics, where I gained proficiency in technical areas including C, Python, Linux systems, supercomputing, and simulations. These skills have equipped me well to take on complex technical challenges. Building upon this foundation, my PhD research took a unique trajectory by blending my expertise in computational social science. My project on analyzing gender biases in academic funding application systems has provided me with solid training in databases and SQL. To further challenge myself, I dedicated efforts to creating a sophisticated simulation framework and a game using Kotlin, which is closely related to Java. This showcases my capability to be a competent Java developer.
+I started my academic journey in physics and mathematics, then I transitioned into a Ph.D. in social science. My education and research background give me an unique advantage - I understand data and people in both natural science and social science. Therefore, I can be a connector to communicate and hear feedback from different departments.
 
-Parallel to my academic pursuits, I have actively engaged in open-source projects. These experiences have broadened my skill set, elevating me from a scientific programmer to a well-rounded software engineer. This underscores my commitment to excellence in software development and my readiness to adapt to new challenges. 
+My current institute, the Centre for Science and Technology Studies (CWTS), is deeply involved in the theme of open science and FAIR data. I have been working with a team, including our data steward, to understand the academic and policy landscape of FAIR data. One of our focal area, "Information \& Openness", has been actively discussing about open data and is planning to participate in some working groups at the Research Data Alliance (RDA). Since this position also requires participation in data management networks such as RDA, I can coordinate the participation to avoid duplicate efforts.
 
-While I don't have any direct experience in finance, my interdisciplinary background has prepared me to understand both the technical and social science sides of issues like financial crime. I am enthusiastic about growing my career in this area at Rabobank.
+I love to share knowledge. I have given many talks about my projects at international conferences. Within my research group, I have organized workshops about topics in technical areas and open science, such as data analysis in Python and open source contribution. Since some of the training contents are now provided by CDS and data stewards, I am happy to continue contributing to the training under this position.
 
-It is a pity that the pandemic forced me to leave the Netherlands for two years, so I didn't have much chance to practice my Dutch. 
-I have recently made quite a few Dutch friends, and I promised them I will learn the language once I secure a job in the Netherlands.
+As a side perk, I am a decent software developer, and I have created a game during my PhD. My technical capability allows me to explore one of possible functionality of data manager - providing technical services such as data storage solutions. Some other universites in the Netherlands, such as TU Delft and Wageningen University \& Research, have such kinds of services, and I am looking forward to learn from the practices from other universities. Moreover, I really enjoyed the events organized by the Research Software Community Leiden of CDS, and I willing to also contribute to that community as a member of CDS.
 
-I am looking forward to the potential opportunity to contribute to Rabobank's projects and bring my skills to the team. Thank you for considering my application.
+Since I had to leave the country during the pandemic, I didn't have the chance to practice my Dutch. Now I am starting to make Dutch friends, and I am happy to advance my Dutch level in the future.
+
+Thank you for considering my application. I eagerly anticipate the opportunity to discuss my qualifications further in an interview.
 
 %\lettersection{Why Me?}
 
