--- a/khl/coverletter/coverletter-leiden.tex
+++ b/khl/coverletter/coverletter-leiden.tex
@@ -122,19 +122,19 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the "Data Management Expert with a heart for science" position at the Center for Digital Scholarship (CDS). As a Ph.D. candidate at Leiden University, I am looking forward to contribute to the data management community at Leiden.
+I am writing to express my strong interest in the “Data Management Expert with a heart for science” position at the Center for Digital Scholarship (CDS). As a Ph.D. candidate at Leiden University, I am eager to contribute my unique blend of expertise to the data management community at Leiden.
 
-I started my academic journey in physics and mathematics, then I transitioned into a Ph.D. in social science. My education and research background give me an unique advantage - I understand data and people in both natural science and social science. Therefore, I can be a connector to communicate and hear feedback from different departments.
+My academic journey, spanning physics, mathematics, and social science, has equipped me with a distinctive advantage - I possess a deep understanding of data in both natural and social sciences. This interdisciplinary background positions me as a valuable connector capable of facilitating communication and feedback exchange between different departments within Leiden University.
 
-My current institute, the Centre for Science and Technology Studies (CWTS), is deeply involved in the theme of open science and FAIR data. I have been working with a team, including our data steward, to understand the academic and policy landscape of FAIR data. One of our focal area, "Information \& Openness", has been actively discussing about open data and is planning to participate in some working groups at the Research Data Alliance (RDA). Since this position also requires participation in data management networks such as RDA, I can coordinate the participation to avoid duplicate efforts.
+My current institute, the Centre for Science and Technology Studies (CWTS), is deeply engaged in the realm of open science and FAIR data. I have been working within a team, including our data steward, to understand the academic and policy landscape of FAIR data. Moreover, in one of our focal area “Information \& Openness”, our team is planning to engage with the Research Data Alliance (RDA) working groups. Given that this position also entails participation in data management networks such as RDA, I am well-prepared to coordinate these efforts to avoid duplication.
 
-I love to share knowledge. I have given many talks about my projects at international conferences. Within my research group, I have organized workshops about topics in technical areas and open science, such as data analysis in Python and open source contribution. Since some of the training contents are now provided by CDS and data stewards, I am happy to continue contributing to the training under this position.
+I am passionate about knowledge sharing and have presented my research at many international conferences. Additionally, I have organized workshops on technical topics and open science within my research group. As some of these training materials are now offered by CDS and data stewards, I am excited to continue contributing to training initiatives in this role.
 
-As a side perk, I am a decent software developer, and I have created a game during my PhD. My technical capability allows me to explore one of possible functionality of data manager - providing technical services such as data storage solutions. Some other universites in the Netherlands, such as TU Delft and Wageningen University \& Research, have such kinds of services, and I am looking forward to learn from the practices from other universities. Moreover, I really enjoyed the events organized by the Research Software Community Leiden of CDS, and I willing to also contribute to that community as a member of CDS.
+Furthermore, I possess strong software engineering capabilities. My proficiency allows me to explore the possibility of working with the ICT department to offer technical services, such as data storage solutions, which align with practices at other Dutch universities like TU Delft and Wageningen University \& Research. Also, I have been keen to contribute to the Research Software Community Leiden of CDS.
 
-Since I had to leave the country during the pandemic, I didn't have the chance to practice my Dutch. Now I am starting to make Dutch friends, and I am happy to advance my Dutch level in the future.
+Since I had to leave the country during the pandemic, I didn’t have the chance to practice my Dutch. I am eager to improve my Dutch level in the future.
 
-Thank you for considering my application. I eagerly anticipate the opportunity to discuss my qualifications further in an interview.
+Thank you for considering my application. I look forward to the opportunity to discuss my qualifications further in an interview.
 
 %\lettersection{Why Me?}
 
