--- a/khl/coverletter/coverletter-delft.tex
+++ b/khl/coverletter/coverletter-delft.tex
@@ -86,12 +86,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Center for Digital Scholarship, Leiden University}
-  {Leiden}
+  {Delft University of Technology}
+  {Delft}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Data Management Expert with a heart for science}
+\lettertitle{Job Application for Research Software Engineer}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -122,21 +122,15 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the “Data Management Expert with a heart for science” position at the Center for Digital Scholarship (CDS). As a Ph.D. candidate at Leiden University, I am eager to contribute my unique blend of expertise to the data management community at Leiden.
+I am writing to express my enthusiastic interest in the "Research Software Engineer" position at TU Delft. As a dedicated researcher and software developer, I am excited about the prospect of leveraging my skills to contribute to scientific software projects.
 
-My academic journey, spanning physics, mathematics, and social science, has equipped me with a distinctive advantage - I possess a deep understanding of data in both natural and social sciences. This interdisciplinary background positions me as a valuable connector capable of facilitating communication and feedback exchange between different departments within Leiden University.
+My academic journey has been a unique blend of physics, astrophysics, and computational social science, providing me with a diverse and robust skill set that aligns well with the role. I have a proven track record in multiple technical domains, including proficiency in C, Python, SQL, Linux systems, and simulations. My commitment to excellence is evident in the development of a sophisticated agent-based simulation framework and a game using Kotlin. The framework, designed with a strong foundation in physics, includes proper design patterns, extensive unit/integration tests, and comprehensive documentation, showcasing my capability as a competent developer.
 
-My current institute, the Centre for Science and Technology Studies (CWTS), is deeply engaged in the realm of open science and FAIR data. I have been working within a team, including our data steward, to understand the academic and policy landscape of FAIR data. Moreover, in one of our focal area “Information \& Openness”, our team is planning to engage with the Research Data Alliance (RDA) working groups. Given that this position also entails participation in data management networks such as RDA, I am well-prepared to coordinate these efforts to avoid duplication of work.
+In addition to my academic pursuits, I have been actively engaged in open-source projects. These experiences have honed my abilities in learning, debugging, and contributing to unfamiliar codebases, reflecting my passion for open-source software and my readiness to embrace novel challenges.
 
-I am passionate about knowledge sharing and have presented my research at many international conferences. Additionally, I have organized workshops on technical topics and open science within my research group. As some of these training materials are now offered by CDS and data stewards, I am excited to continue contributing to training initiatives in this role.
+Throughout my academic journey, I have thrived in diverse, cross-cultural collaborations, honing my teamwork and communication skills. I have also taken the initiative to organize workshops and actively participate in events to promote open science, open-source principles, and FAIR data practices. These experiences have equipped me to excel in collaborative environments and contribute effectively to cross-functional teams.
 
-Furthermore, I possess strong software engineering capabilities. My proficiency allows me to explore the possibility of working with the ICT department to offer technical services, such as data storage solutions, which align with practices at other Dutch universities like TU Delft and Wageningen University \& Research. Also, I have been keen on contributing to the Research Software Community Leiden of CDS.
-
-Since I had to leave the country during the pandemic, I didn’t have the chance to practice my Dutch. I am eager to improve my Dutch level in the future.
-
-Thank you for considering my application. I look forward to the opportunity to discuss my qualifications further in an interview.
-
-%\lettersection{Why Me?}
+Thank you for considering my application. I eagerly anticipate the opportunity to discuss my qualifications further in an interview and explore how my skills and passion align with the exciting work at TU Delft.
 
 \end{cvletter}
 
