--- a/khl/coverletter/coverletter-irdeto.tex
+++ b/khl/coverletter/coverletter-irdeto.tex
@@ -86,12 +86,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Center for Digital Scholarship, Leiden University}
-  {Leiden}
+  {Irdeto}
+  {Hoofddorp, the Netherlands}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Data Management Expert with a heart for science}
+\lettertitle{Job Application for Software Engineer}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -122,19 +122,17 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the “Data Management Expert with a heart for science” position at the Center for Digital Scholarship (CDS). As a Ph.D. candidate at Leiden University, I am eager to contribute my unique blend of expertise to the data management community at Leiden.
+I am thrilled to apply for the "Software Engineer" position at Irdeto and am eager to bring my technical skills to contribute to your cutting-edge cybersecurity solutions.
 
-My academic journey, spanning physics, mathematics, and social science, has equipped me with a distinctive advantage - I possess a deep understanding of data in both natural and social sciences. This interdisciplinary background positions me as a valuable connector capable of facilitating communication and feedback exchange between different departments within Leiden University.
+My academic journey has been a unique blend of physics, astrophysics, and computational social science, providing me with a diverse and robust skill set that aligns well the role. My experience spans a range of technical domains, including C, Python, SQL, Linux systems, and simulations. To further challenge myself, I have crafted a sophisticated agent-based simulation framework and a game using Kotlin. The framework has a strong affinity to physics, and it has proper design pattern, unit/integration tests, and documentations. This showcases my capability to excel as a competent developer.
 
-My current institute, the Centre for Science and Technology Studies (CWTS), is deeply engaged in the realm of open science and FAIR data. I have been working within a team, including our data steward, to understand the academic and policy landscape of FAIR data. Moreover, in one of our focal area “Information \& Openness”, our team is planning to engage with the Research Data Alliance (RDA) working groups. Given that this position also entails participation in data management networks such as RDA, I am well-prepared to coordinate these efforts to avoid duplication of work.
+Beyond academics, I have actively contributed to open-source projects, offering features, bug fixes, and documentation improvements. My commitment to open-source projects and continuous learning reflects my dedication to becoming a well-rounded software engineer.
 
-I am passionate about knowledge sharing and have presented my research at many international conferences. Additionally, I have organized workshops on technical topics and open science within my research group. As some of these training materials are now offered by CDS and data stewards, I am excited to continue contributing to training initiatives in this role.
+Throughout my doctoral studies, I collaborated with individuals from diverse backgrounds. This experience refined my collaborative skills, enabling me to work effectively within multidisciplinary teams across geographical boundaries.
 
-Furthermore, I possess strong software engineering capabilities. My proficiency allows me to explore the possibility of working with the ICT department to offer technical services, such as data storage solutions, which align with practices at other Dutch universities like TU Delft and Wageningen University \& Research. Also, I have been keen on contributing to the Research Software Community Leiden of CDS.
+I am a fast learner and thrive on adapting to new skill sets in various fields. I am confident in my ability to bridge any knowledge gap and am excited about the possibility of contributing to Irdeto's projects.
 
-Since I had to leave the country during the pandemic, I didn’t have the chance to practice my Dutch. I am eager to improve my Dutch level in the future.
-
-Thank you for considering my application. I look forward to the opportunity to discuss my qualifications further in an interview.
+Thank you for considering my application. I look forward to the opportunity to discuss how my skills and experiences align with the needs of your team.
 
 %\lettersection{Why Me?}
 
