Update technical cv

--- a/khl/cv/experience.tex
+++ b/khl/cv/experience.tex
@@ -28,17 +28,19 @@
 %---------------------------------------------------------
   \cventry
     {Researcher} % Research project
-    {Research on Research Institute (RORI)} % Research organization
+    {Centre for Science and Technology Studies (CWTS) / Research on Research Institute} % Research organization
     {Leiden, The Netherlands} % Location
-    {Jan. 2020 - present} % Date(s)
+    {Jun. 2019 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item{Constructed Bayesian models to analyze the impact of funding application criteria on gender biases}
+        \item{Collaborated with an international team spanning 5 countries}
         \item{Developed agent-based models in Java/Python/Julia to study the behavior of funding applicants}
         \item{Conducted data analysis using Python and SQL, powered by AWS, PostgreSQL, and MSSQL}
-        \item{Collaborated with an international team spanning 5 countries}
+        \item{Participated in the Research Software Community Leiden}
+        \item{Organized training workshops on open science and open source practices}
       \end{cvitems}
     }
+
 
 %---------------------------------------------------------
   \cventry
