--- a/khl/resume/resume-data.tex
+++ b/khl/resume/resume-data.tex
@@ -164,7 +164,7 @@ Dedicated researcher and developer with a diverse background in data-oriented re
 
     \resumeSubheading
       {Researcher}{Leiden, the Netherlands}
-      {Research of research institute (RORI)}{Jan. 2020 -- present}
+      {Research on Research Institute (RORI)}{Jan. 2020 -- present}
       \resumeItemListStart
         \resumeItem{Collaborated with an international team spanning 5 countries}
         \resumeItem{Worked with software developers to build a data platform for confidential funding data}
