--- a/khl/resume/resume-jetbrain.tex
+++ b/khl/resume/resume-jetbrain.tex
@@ -165,7 +165,7 @@ Passionate about advancing the Kotlin language/ecosystem.
 
     \resumeSubheading
       {Researcher}{Leiden, the Netherlands}
-      {Research of research institute (RORI)}{Jan. 2020 -- present}
+      {Research on Research Institute (RORI)}{Jan. 2020 -- present}
       \resumeItemListStart
         \resumeItem{Constructed Bayesian models to analyze the impact of funding application criteria on gender biases}
         \resumeItem{Conducted data analysis using Python and SQL, powered by AWS, PostgreSQL, and MSSQL}
