--- a/khl/resume/resume-challenge.tex
+++ b/khl/resume/resume-challenge.tex
@@ -164,7 +164,7 @@ Enthusiastic indie game developer and researcher with a strong background in phy
 
     \resumeSubheading
       {Researcher}{Leiden, the Netherlands}
-      {Research of research institute (RORI)}{Jan. 2020 -- present}
+      {Research on Research Institute (RORI)}{Jan. 2020 -- present}
       \resumeItemListStart
         \resumeItem{Constructed Bayesian models to analyze the impact of funding application criteria on gender biases}
         \resumeItem{Developed agent-based models in Java/Python/Julia to study the behavior of funding applicants}
