Update sofico cover letter

--- a/khl/coverletter/coverletter-sofico.tex
+++ b/khl/coverletter/coverletter-sofico.tex
@@ -124,7 +124,7 @@
 
 I am writing to express my enthusiastic interest in the "Java Software Engineer" position at SOFICO. With a background as a software developer and a researcher, I am excited about the opportunity to work on challenging software projects in the automative finance industry.
 
-My academic journey has been a unique blend of physics, astrophysics, and computational social science, which has equipped me with a strong foundation in problem-solving and analytical thinking. Throughout my studies, I have gained proficiency in a wide range of programming languages, including C, Java, Python, SQL, and experience working with Linux systems and simulations. To further challenge myself, I crafted a sophisticated agent-based simulation framework and developed a game using Kotlin. The framework, designed with proper design patterns, comprehensive unit/integration tests, and thorough documentation, exemplifies my competence as a developer.
+My academic journey has been a unique blend of physics, astrophysics, and computational social science, which has equipped me with a strong foundation in problem-solving and analytical thinking. Throughout my studies, I have gained proficiency in a wide range of programming languages, including C, Java, Python, SQL, and experience working with Linux systems and simulations. To further challenge myself, I crafted a sophisticated agent-based simulation framework and developed a game using Kotlin on the Java virtual machine, designed with proper design patterns, comprehensive unit/integration tests, and thorough documentation, exemplifies my competence as a developer.
 
 In parallel with my academic pursuits, I have actively contributed to open-source projects, transforming me from a scientific programmer into a well-rounded software engineer. One standout example of my commitment to software excellence is my KSerGen library, created after my discovery of KSP at KotlinConf 2023. This library automates the generation of immutable data classes and serialization hierarchies, significantly reducing boilerplate code in my Kotlin games. This streamlined development process has led to a substantial reduction in development time and improved code quality. 
 
